--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,9 @@
 body{
     background-color: #f6f8f9;
 }
+li{
+    list-style: none;
+}
 .color-principal{
     color: #000000;
     font-size: 60px;
@@ -23,6 +26,7 @@ body{
     margin:0 auto;
     width: 80%;
     height: 600px ;
+    padding: 40px;
 }
 
 .background-white{
@@ -32,10 +36,25 @@ body{
     border-radius: 5px;
     padding: 7px;
 }
-#button1{
+/* check and nocheck */
+.check{
+    border-radius: 100%;
+    border: solid #9ad7c8;
+    color: #9ad7c8;
+    font-size: 10px;
+    padding: 2px;
+}
+.box{
+    border-radius: 10px;
+    padding: 5px;
+    font-size: 10px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+/* colors */
+.color-blu{
     background-color: #45abea;
-    color: white;
     border: solid #45abea;
+    color: white;
 }
 
 #button2{
