--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,6 @@ li{
     margin-bottom: 20px;
 }
 .color-principal{
-    color: #000000;
     font-size: 60px;
 }
 
@@ -43,11 +42,15 @@ li{
     padding: 7px;
     color: white;
 }
+.triangle{
+    font-size: 18px;
+}
 /* check and nocheck */
 .formck{
-    border-radius: 100%;
-    font-size: 10px;
+    border-radius: 50%;
+    font-size: 8px;
     padding: 2px;
+    width: 3px;
 }
 .check{
     border: solid #9ad7c8;
